--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
   "name": "sedrajs",
   "version": "1.0.0",
-  "description": "A JavaScript representation of SEDRA 3 databas",
+  "description": "A JavaScript representation of SEDRA 3 database",
   "main": "build/sedrajs.js",
   "main݂Min": "build/sedrajs.min.js",
   "module": "build/sedrajs.esm.js",
+  "convert": "build/dist/convert.js",
+  "convertMin": "build/dist/convert.min.js",
   "scripts": {
     "pretest": "rollup -c",
     "test": "mocha --reporter test/istanbul.reporter.js --recursive",
-    "prebuild": "npm run doc && npm test && npm run lint",
-    "build": "npm run bundle",
+    "prebuild": "npm test && npm run lint",
+    "build": "npm run bundle && npm run doc",
     "bundle": "rollup -c --environment BUILD:production",
     "build:dev": "rollup -c --environment BUILD:dev",
     "lint": "eslint src test",
-    "doc": "jsdoc2md -t doc/readme.hbs src/*.js > README.md",
+    "doc": "jsdoc2md -t doc/readme.hbs build/dist/convert.js > README.md",
     "coverage": "cat ./coverage/lcov.info | coveralls && rm -rf ./coverage",
     "prepublish": "npm run build"
   },
@@ -29,10 +31,7 @@
       "no-bitwise": 0
     }
   },
-  "files": [
-    "sedra/*.*",
-    "src/*.js"
-  ],
+  "files": ["sedra/*.*", "build/dist/*.js"],
   "engines": {
     "node": ">=6.0.0"
   },
@@ -61,23 +60,19 @@
   },
   "homepage": "https://github.com/peshitta/sedrajs#readme",
   "dependencies": {
+    "rollup": "^0.50.0",
     "sedra-cal": "^1.0.8",
     "sedra-model": "^1.0.0"
   },
   "devDependencies": {
-    "babel-core": "^7.0.0-beta.1",
-    "babel-plugin-external-helpers": "^7.0.0-beta.1",
-    "babel-preset-env": "^2.0.0-beta.1",
-    "babelrc-rollup": "^3.0.0",
-    "coveralls": "^2.13.1",
-    "eslint": "^4.7.2",
-    "eslint-config-airbnb-base": "^12.0.0",
+    "coveralls": "^2.13.3",
+    "eslint": "^4.8.0",
+    "eslint-config-airbnb-base": "^12.0.1",
     "eslint-plugin-import": "^2.7.0",
     "istanbul": "^0.4.5",
     "jsdoc-to-markdown": "^3.0.0",
-    "mocha": "^3.5.3",
-    "rollup": "^0.50.0",
-    "rollup-plugin-babel": "^3.0.2",
+    "mocha": "^4.0.0",
+    "rollup-plugin-buble": "^0.16.0",
     "rollup-plugin-istanbul": "^1.1.0",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-uglify": "^2.0.1"
