--- a/package.json
+++ b/package.json
@@ -12,13 +12,12 @@
     "test": "mocha --reporter test/istanbul.reporter.js --recursive",
     "prebuild": "npm run doc && npm test && npm run lint",
     "build": "npm run bundle",
-    "postbuild": "npm run postinstall",
     "bundle": "rollup -c --environment BUILD:production",
     "build:dev": "rollup -c --environment BUILD:dev",
     "lint": "eslint src test",
     "doc": "jsdoc2md -t doc/readme.hbs src/*.js > README.md",
     "coverage": "cat ./coverage/lcov.info | coveralls && rm -rf ./coverage",
-    "prepublish": "npm run build",
+    "prepare": "npm run build",
     "postinstall": "node build/convert/convert.min.js"
   },
   "eslintConfig": {
@@ -32,7 +31,7 @@
       "arrow-parens": 0
     }
   },
-  "files": ["build/convert/*.*js"],
+  "files": ["sedra", "build/convert/*.*js"],
   "engines": {
     "node": ">=6.0.0"
   },
