--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sedrajs",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "Scripts to convert SEDRA 3 text database to JavaScript",
   "main": "build/sedrajs.js",
   "module": "build/sedrajs.esm.js",
@@ -9,7 +9,8 @@
   "convertMjs": "build/convert/convert.mjs",
   "scripts": {
     "pretest": "rollup -c",
-    "test": "mocha --reporter test/istanbul.reporter.js --recursive --timeout 15000",
+    "test":
+      "mocha --reporter test/istanbul.reporter.js --recursive --timeout 15000",
     "prebuild": "npm run doc && npm test && npm run lint",
     "build": "npm run bundle",
     "bundle": "rollup -c --environment BUILD:production",
@@ -18,7 +19,8 @@
     "doc": "jsdoc2md -t doc/readme.hbs src/*.js > README.md",
     "coverage": "cat ./coverage/lcov.info | coveralls && rm -rf ./coverage",
     "prepare": "npm run build",
-    "postinstall": "node build/convert/convert.min.js"
+    "postinstall":
+      "node -e \"require('./build/convert/convert.min.js').convertDb()\""
   },
   "eslintConfig": {
     "extends": "airbnb-base",
@@ -31,10 +33,7 @@
       "arrow-parens": 0
     }
   },
-  "files": [
-    "sedra",
-    "build/convert/*.*js"
-  ],
+  "files": ["sedra", "build/convert/*.*js"],
   "engines": {
     "node": ">=6.0.0"
   },
@@ -64,7 +63,7 @@
   "homepage": "https://github.com/peshitta/sedrajs#readme",
   "dependencies": {
     "sedra-model": "^1.1.7",
-    "sedra-parse": "^1.0.9"
+    "sedra-parse": "^1.1.2"
   },
   "devDependencies": {
     "coveralls": "^3.0.0",
@@ -73,8 +72,8 @@
     "eslint-plugin-import": "^2.8.0",
     "istanbul": "^0.4.5",
     "jsdoc-to-markdown": "^3.0.3",
-    "mocha": "^4.0.1",
-    "rollup": "^0.53.0",
+    "mocha": "^4.1.0",
+    "rollup": "^0.53.1",
     "rollup-plugin-buble": "^0.18.0",
     "rollup-plugin-istanbul": "^2.0.0",
     "rollup-plugin-node-resolve": "^3.0.0",
